--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -3,7 +3,6 @@
 	<div class="mw7 center pt3">
 		<div class="flex-ns justify-between">
 			<div>
-				<h3 class="f4 b lh-title mb1 primary">pięknysoft</h3>
 				<ul class="mb3">
 					<li><a href="/" class="link">pięknysoft</a></li>
 					<li><a href="/products" class="link">Produkty</a></li>
@@ -13,7 +12,7 @@
 				</ul>
 			</div>
 
-			<div>
+			<!-- <div>
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
 				<ul class="mhn2">
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook" "alt" "Facebook") }}
@@ -21,7 +20,7 @@
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram" "alt" "Instagram") }}
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-vimeo" "alt" "Vimeo") }}
 				</ul>
-			</div>
+			</div> -->
 
 		</div>
 	</div>
